<resources>
    <string name="app_name">Outfit Picker</string>
    <string name="menu_picker">Picker</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_clothes">Add Clothes</string>
    <string name="clothing_image">Clothing Image</string>
    <string name="picker">Picker</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="tops">Tops</string>
    <string name="bottoms">Bottoms</string>
    <string name="username">Username</string>
    <string name="update_username">Update Username</string>
    <string name="update_photo">Update Photo</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="all">All</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about_our_app">About Our App</string>
    <string name="back">Back</string>
    <string name="about_app_description">About our app</string>
    <string name="settings">Settings</string>
    <string name="about_text">In 2024, this app was created by Peter Brodnik and Natalija Ivanović, in partnership with the Faculty of Electrical Engineering.</string>
    <string name="top_image">Top Image Outfit</string>
    <string name="bottom_image">Bottom Image Outfit</string>
    <string name="select_an_image">Select an Image</string>
</resources>