<!-- activity_about.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/main_color">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lighter_main_color"
        android:text="@string/back"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_our_app"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

</LinearLayout>
