<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ClosetFragment">

    <!-- Buttons for filtering -->
    <LinearLayout
        android:id="@+id/filter_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="start">

        <Button
            android:id="@+id/button_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/button_tops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tops"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/button_bottoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottoms" />
    </LinearLayout>

    <!-- RecyclerView for displaying clothing items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filter_buttons"
        android:padding="16dp"
        android:scrollbars="vertical" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_clothes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/add_clothes"
        app:srcCompat="@drawable/ic_plus" /> <!-- Replace this with your icon resource -->

</RelativeLayout>
