<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ClosetFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:paddingTop="20dp"
        android:text="@string/picker"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="100dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="400dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"> <!-- To center align the buttons horizontally -->

        <Button
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/main_color"
            android:fontFamily="sans-serif-black"
            android:layout_marginEnd="5dp"
            android:text="@string/top" />

        <Button
            android:id="@+id/bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/main_color"
            android:fontFamily="sans-serif-black"
            android:layout_marginStart="5dp"
            android:text="@string/bottom" />

    </LinearLayout>
</RelativeLayout>