<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_color">


    <ImageView
        android:id="@+id/additional_1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/additional_1" />


    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lighter_main_color"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/settings"/>

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/profile_placeholder" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:padding="8dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_photo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/lighter_main_color"
        android:text="@string/update_username" />

    <Button
        android:id="@+id/photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_photo"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/update_button"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/main_color"
        android:text="@string/update_photo" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/favourites_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FAVOURITES"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/star_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_star" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/outfits_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="350dp"
        android:orientation="horizontal"
        tools:listitem="@layout/item_outfit" />

    <Button
        android:id="@+id/clear_favorites_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/linearLayout"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/profile_photo"
        android:layout_marginTop="110dp"
        android:textSize="8dp"
        android:backgroundTint="@color/lighter_main_color"
        android:text="Clear Favorites" />

</RelativeLayout>
